--- a/.github/workflows/dotnet3.1.yml
+++ b/.github/workflows/dotnet3.1.yml
@@ -1,4 +1,4 @@
-name: .NET Build
+name: .NET Build 3.1
 
 on:
   workflow_dispatch:
@@ -14,10 +14,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        ref: 'v3.1'
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.x
+        dotnet-version: 3.1.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
