--- a/src/Bullhorn/Bullhorn.csproj
+++ b/src/Bullhorn/Bullhorn.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net5.0;netstandard2.1</TargetFrameworks>
     <Nullable>enable</Nullable>
-    <Version>3.1.12</Version>
+    <Version>5.0.0</Version>
     <Description>.NET Core Bullhorn REST API integration.</Description>
     <PackageTags>aspnetcore,bullhorn</PackageTags>
     <Authors>Vaclav Elias</Authors>
@@ -22,11 +22,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.12" />
-    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.12" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="5.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="IdentityModel" Version="4.6.0" />
-    <PackageReference Include="System.Text.Json" Version="4.7.2" />
+    <PackageReference Include="IdentityModel" Version="5.0.1" />
+    <PackageReference Include="System.Text.Json" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
