--- a/src/Bullhorn/Bullhorn.csproj
+++ b/src/Bullhorn/Bullhorn.csproj
@@ -25,7 +25,7 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="5.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <!--<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />-->
     <PackageReference Include="IdentityModel" Version="5.0.1" />
     <PackageReference Include="System.Text.Json" Version="5.0.1" />
   </ItemGroup>
