--- a/src/Bullhorn/Bullhorn.csproj
+++ b/src/Bullhorn/Bullhorn.csproj
@@ -30,4 +30,11 @@
     <PackageReference Include="System.Text.Json" Version="5.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\..\icon-512x512.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
+
 </Project>
