--- a/src/Bullhorn.CommandLine/Bullhorn.CommandLine.csproj
+++ b/src/Bullhorn.CommandLine/Bullhorn.CommandLine.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\AspNetCoreGithub\src\CodeCapital.System.Text.Json\CodeCapital.System.Text.Json.csproj" />
     <ProjectReference Include="..\Bullhorn\Bullhorn.csproj" />
   </ItemGroup>
 
