--- a/src/Bullhorn/Bullhorn.csproj
+++ b/src/Bullhorn/Bullhorn.csproj
@@ -1,38 +1,38 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>net5.0</TargetFrameworks>
-    <Nullable>enable</Nullable>
-    <Version>5.0.6</Version>
-    <Description>.NET Core Bullhorn REST API integration.</Description>
-    <PackageTags>aspnetcore,bullhorn</PackageTags>
-    <Authors>Vaclav Elias</Authors>
-    <Company>Code Capital</Company>
-    <PackageIcon>icon-512x512.png</PackageIcon>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <RepositoryUrl>https://github.com/codecapital/CodeCapital.Bullhorn</RepositoryUrl>
-    <PackageProjectUrl>https://github.com/codecapital/CodeCapital.Bullhorn</PackageProjectUrl>
-    <AssemblyVersion>$(Version)</AssemblyVersion>
-    <FileVersion>$(Version)</FileVersion>
-    <LangVersion>9.0</LangVersion>
-    <AssemblyName>CodeCapital.Bullhorn</AssemblyName>
-    <RootNamespace>CodeCapital.Bullhorn</RootNamespace>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFrameworks>net6.0</TargetFrameworks>
+        <Nullable>enable</Nullable>
+        <Version>6.0.0</Version>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Description>.NET Core Bullhorn REST API integration.</Description>
+        <PackageTags>aspnetcore,bullhorn</PackageTags>
+        <Authors>Vaclav Elias</Authors>
+        <Company>Code Capital</Company>
+        <PackageIcon>icon-512x512.png</PackageIcon>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <RepositoryUrl>https://github.com/codecapital/CodeCapital.Bullhorn</RepositoryUrl>
+        <PackageProjectUrl>https://github.com/codecapital/CodeCapital.Bullhorn</PackageProjectUrl>
+        <AssemblyVersion>$(Version)</AssemblyVersion>
+        <FileVersion>$(Version)</FileVersion>
+        <AssemblyName>CodeCapital.Bullhorn</AssemblyName>
+        <RootNamespace>CodeCapital.Bullhorn</RootNamespace>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="CodeCapital.System.Text.Json" Version="5.0.4" />
-    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="5.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
-    <PackageReference Include="IdentityModel" Version="5.2.0" />
-    <PackageReference Include="System.Text.Json" Version="5.0.2" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="CodeCapital.System.Text.Json" Version="6.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.3" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+        <PackageReference Include="IdentityModel" Version="5.2.0" />
+        <PackageReference Include="System.Text.Json" Version="6.0.2" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <None Include="..\..\icon-512x512.png">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-  </ItemGroup>
+    <ItemGroup>
+        <None Include="..\..\icon-512x512.png">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+    </ItemGroup>
 
 </Project>
